Issue #2634: Add `Java8toJava11`